--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,14 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: sqlite3
+production: &default
+  adapter: postgresql
+  database: todoism
+  encoding: utf8
+  min_messages: warning
   pool: 5
   timeout: 5000
+
 
 development:
   <<: *default
